forgot to save before push

--- a/Assignment/Assignment_1/CA1_spotify.ipynb
+++ b/Assignment/Assignment_1/CA1_spotify.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 378,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 379,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 380,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 381,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 382,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 383,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
        "495"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 383,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 384,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
        "1308"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 384,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 385,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 386,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 387,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 388,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 389,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 390,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
        "<Axes: xlabel='artistName'>"
       ]
      },
-     "execution_count": 279,
+     "execution_count": 390,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 391,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
        "<Axes: xlabel='trackName'>"
       ]
      },
-     "execution_count": 280,
+     "execution_count": 391,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 392,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
        "<Axes: xlabel='hour'>"
       ]
      },
-     "execution_count": 281,
+     "execution_count": 392,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 393,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
        "<Axes: xlabel='hour'>"
       ]
      },
-     "execution_count": 286,
+     "execution_count": 393,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 394,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 395,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +747,7 @@
        "156539"
       ]
      },
-     "execution_count": 288,
+     "execution_count": 395,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -779,42 +779,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 396,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                        SkipRate\n",
-      "artistName                                      \n",
-      "Epona                                   0.250000\n",
-      "ghostly echoes                          0.214286\n",
-      "Vett og vitenskap - med Gaute Einevoll  0.214286\n",
-      "Frank Sinatra                           0.214286\n",
-      "Kainbeats                               0.200000\n",
-      "Basstrologe                             0.200000\n",
-      "Wham!                                   0.166667\n",
-      "LACES                                   0.142857\n",
-      "Roc Boyz                                0.111111\n",
-      "Gloria Gaynor                           0.000000\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'artistName'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[365], line 13\u001b[0m\n\u001b[1;32m     10\u001b[0m df_skipped \u001b[38;5;241m=\u001b[39m df_skipped\u001b[38;5;241m.\u001b[39msort_values(by\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSkipRate\u001b[39m\u001b[38;5;124m'\u001b[39m, ascending\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(df_skipped\u001b[38;5;241m.\u001b[39mtail(\u001b[38;5;241m10\u001b[39m))\n\u001b[0;32m---> 13\u001b[0m df_grouped \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mskipped\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgroupby\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43martistName\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mmean()\n\u001b[1;32m     14\u001b[0m df_skipped \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(df_grouped)\n\u001b[1;32m     15\u001b[0m df_skipped\u001b[38;5;241m.\u001b[39mcolumns \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSkipRate\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
-      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/pandas/core/series.py:2237\u001b[0m, in \u001b[0;36mSeries.groupby\u001b[0;34m(self, by, axis, level, as_index, sort, group_keys, observed, dropna)\u001b[0m\n\u001b[1;32m   2234\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas_index=False only valid with DataFrame\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m   2235\u001b[0m axis \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_axis_number(axis)\n\u001b[0;32m-> 2237\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mSeriesGroupBy\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   2238\u001b[0m \u001b[43m    \u001b[49m\u001b[43mobj\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2239\u001b[0m \u001b[43m    \u001b[49m\u001b[43mkeys\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mby\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2240\u001b[0m \u001b[43m    \u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2241\u001b[0m \u001b[43m    \u001b[49m\u001b[43mlevel\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mlevel\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2242\u001b[0m \u001b[43m    \u001b[49m\u001b[43mas_index\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mas_index\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2243\u001b[0m \u001b[43m    \u001b[49m\u001b[43msort\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msort\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2244\u001b[0m \u001b[43m    \u001b[49m\u001b[43mgroup_keys\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mgroup_keys\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2245\u001b[0m \u001b[43m    \u001b[49m\u001b[43mobserved\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mobserved\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2246\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdropna\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdropna\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2247\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/pandas/core/groupby/groupby.py:1329\u001b[0m, in \u001b[0;36mGroupBy.__init__\u001b[0;34m(self, obj, keys, axis, level, grouper, exclusions, selection, as_index, sort, group_keys, observed, dropna)\u001b[0m\n\u001b[1;32m   1326\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdropna \u001b[38;5;241m=\u001b[39m dropna\n\u001b[1;32m   1328\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m grouper \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m-> 1329\u001b[0m     grouper, exclusions, obj \u001b[38;5;241m=\u001b[39m \u001b[43mget_grouper\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   1330\u001b[0m \u001b[43m        \u001b[49m\u001b[43mobj\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1331\u001b[0m \u001b[43m        \u001b[49m\u001b[43mkeys\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1332\u001b[0m \u001b[43m        \u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1333\u001b[0m \u001b[43m        \u001b[49m\u001b[43mlevel\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mlevel\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1334\u001b[0m \u001b[43m        \u001b[49m\u001b[43msort\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msort\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1335\u001b[0m \u001b[43m        \u001b[49m\u001b[43mobserved\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mif\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mobserved\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01mis\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mlib\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mno_default\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01melse\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mobserved\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1336\u001b[0m \u001b[43m        \u001b[49m\u001b[43mdropna\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdropna\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1337\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1339\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m observed \u001b[38;5;129;01mis\u001b[39;00m lib\u001b[38;5;241m.\u001b[39mno_default:\n\u001b[1;32m   1340\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28many\u001b[39m(ping\u001b[38;5;241m.\u001b[39m_passed_categorical \u001b[38;5;28;01mfor\u001b[39;00m ping \u001b[38;5;129;01min\u001b[39;00m grouper\u001b[38;5;241m.\u001b[39mgroupings):\n",
-      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/pandas/core/groupby/grouper.py:1043\u001b[0m, in \u001b[0;36mget_grouper\u001b[0;34m(obj, key, axis, level, sort, observed, validate, dropna)\u001b[0m\n\u001b[1;32m   1041\u001b[0m         in_axis, level, gpr \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m, gpr, \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m   1042\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 1043\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(gpr)\n\u001b[1;32m   1044\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(gpr, Grouper) \u001b[38;5;129;01mand\u001b[39;00m gpr\u001b[38;5;241m.\u001b[39mkey \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m   1045\u001b[0m     \u001b[38;5;66;03m# Add key to exclusions\u001b[39;00m\n\u001b[1;32m   1046\u001b[0m     exclusions\u001b[38;5;241m.\u001b[39madd(gpr\u001b[38;5;241m.\u001b[39mkey)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'artistName'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_grouped = df.groupby('artistName')['skipped'].mean()\n",
     "df_skipped = pd.DataFrame(df_grouped)\n",
@@ -831,26 +798,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 397,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          artistName  skipped  SkipRate\n",
-      "10881  Ariana Grande        1       NaN\n",
-      "10882  Ariana Grande        1       NaN\n",
-      "10883  Ariana Grande        1       NaN\n",
-      "           artistName  skipped  SkipRate\n",
-      "167437  Leonard Cohen        1       NaN\n",
-      "167436  Ariana Grande        1       NaN\n",
-      "167438   The Vaccines        1       NaN\n"
+      "               SkipRate\n",
+      "artistName             \n",
+      "Gloria Gaynor  0.000000\n",
+      "Roc Boyz       0.111111\n",
+      "LACES          0.142857\n",
+      "                SkipRate\n",
+      "artistName              \n",
+      "G Mills              1.0\n",
+      "Ramón                1.0\n",
+      "Kelly Clarkson       1.0\n"
      ]
     }
    ],
    "source": [
-    "df_skipped = df_skipped.sort_values(by='SkipRate', ascending=False)\n",
+    "df_skipped = df_skipped.sort_values(by='SkipRate')\n",
     "print(df_skipped.head(3))\n",
     "print(df_skipped.tail(3))"
    ]
@@ -872,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 399,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 400,
    "metadata": {},
    "outputs": [
     {
@@ -924,21 +893,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Part 4: Answers\n",
+    "\n",
     "#### Q1\n",
-    "Did skip a lot of Ariana Grandes songs.\n",
+    "Ariana Grande is one of the most skipped artist, with almost 90% of the songs skipped.\n",
     "\n",
     "#### Q2\n",
-    "lots of songs started. She is the one with most play time, even when she is mostly skipped. \n",
-    "One reson is that she have many popular songs that are in a lot of playlist on spotify, and one is that you have skipped a lot of songes\n",
-    "but it is in precentage so might also have listen to a lot."
+    "One reson might be that she is the one with the most songs started.  \n",
+    "Another is that even when she is mostly skipped, all the small chunks of seconds add up when she has a lot of songs. All these small add ups become a large time.\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
