--- a/Assignment/Assignment_3/CA3_template.ipynb
+++ b/Assignment/Assignment_3/CA3_template.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -186,11 +186,10 @@
     "df = imputer.transform(df.values)\n",
     "df = pd.DataFrame(df, columns=columns)\n",
     "\n",
+    "\n",
     "for i in df.columns:\n",
     "    z_scores = (df[i] - np.mean(df[i])) / np.std(df[i])\n",
-    "    df_clean = df[np.abs(z_scores) < 2]\n",
-    "\n",
-    "df = df.dropna()"
+    "    df_clean = df[np.abs(z_scores) < 1]\n"
    ]
   },
   {
@@ -202,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,112 +226,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rf 0.9006410256410257 1\n",
-      "rf 0.9230769230769231 2\n",
-      "rf 0.9038461538461539 3\n",
-      "rf 0.9134615384615384 4\n",
-      "rf 0.9230769230769231 5\n",
-      "rf 0.9006410256410257 6\n",
-      "rf 0.9102564102564102 7\n",
-      "rf 0.9134615384615384 8\n",
-      "rf 0.9134615384615384 9\n",
-      "rf 0.8878205128205128 10\n",
-      "rf 0.9166666666666666 11\n",
-      "rf 0.8942307692307693 12\n",
-      "rf 0.9166666666666666 13\n",
-      "rf 0.9198717948717948 14\n",
-      "rf 0.9198717948717948 15\n",
-      "rf 0.8910256410256411 16\n",
+      "rf 0.7852564102564102 1\n",
+      "rf 0.7980769230769231 2\n",
+      "rf 0.8493589743589743 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rf 0.8557692307692307 4\n",
+      "rf 0.8589743589743589 5\n",
+      "rf 0.8653846153846154 6\n",
+      "rf 0.8814102564102564 7\n",
+      "rf 0.8814102564102564 8\n",
+      "rf 0.8846153846153846 9\n",
+      "rf 0.8910256410256411 10\n",
+      "rf 0.9006410256410257 11\n",
+      "rf 0.8846153846153846 12\n",
+      "rf 0.9006410256410257 13\n",
+      "rf 0.9038461538461539 14\n",
+      "rf 0.907051282051282 15\n",
+      "rf 0.9166666666666666 16\n",
       "rf 0.9134615384615384 17\n",
-      "rf 0.9166666666666666 18\n",
+      "rf 0.9102564102564102 18\n",
       "rf 0.9102564102564102 19\n",
-      "rf 0.9006410256410257 20\n",
-      "rf 0.907051282051282 21\n",
-      "rf 0.9262820512820513 22\n",
-      "rf 0.9102564102564102 23\n",
-      "rf 0.9134615384615384 24\n",
-      "rf 0.9134615384615384 25\n",
-      "rf 0.8910256410256411 26\n",
+      "rf 0.9198717948717948 20\n",
+      "rf 0.9198717948717948 21\n",
+      "rf 0.9134615384615384 22\n",
+      "rf 0.9166666666666666 23\n",
+      "rf 0.9230769230769231 24\n",
+      "rf 0.9166666666666666 25\n",
+      "rf 0.9166666666666666 26\n",
       "rf 0.9230769230769231 27\n",
-      "rf 0.9102564102564102 28\n",
-      "rf 0.9102564102564102 29\n",
-      "rf 0.9198717948717948 30\n",
-      "rf 0.9038461538461539 31\n",
-      "rf 0.9102564102564102 32\n",
-      "rf 0.9006410256410257 33\n",
-      "rf 0.8974358974358975 34\n",
-      "rf 0.8974358974358975 35\n",
-      "rf 0.9230769230769231 36\n",
-      "rf 0.9134615384615384 37\n",
-      "rf 0.9198717948717948 38\n",
-      "rf 0.9166666666666666 39\n",
-      "rf 0.9166666666666666 40\n",
-      "rf 0.9134615384615384 41\n",
+      "rf 0.9198717948717948 28\n",
+      "rf 0.9230769230769231 29\n",
+      "rf 0.9230769230769231 30\n",
+      "rf 0.9198717948717948 31\n",
+      "rf 0.9198717948717948 32\n",
+      "rf 0.9198717948717948 33\n",
+      "rf 0.9198717948717948 34\n",
+      "rf 0.9166666666666666 35\n",
+      "rf 0.9262820512820513 36\n",
+      "rf 0.9262820512820513 37\n",
+      "rf 0.9230769230769231 38\n",
+      "rf 0.9294871794871795 39\n",
+      "rf 0.9230769230769231 40\n",
+      "rf 0.9198717948717948 41\n",
       "rf 0.9166666666666666 42\n",
-      "rf 0.9006410256410257 43\n",
-      "rf 0.9134615384615384 44\n",
-      "rf 0.907051282051282 45\n",
-      "rf 0.9006410256410257 46\n",
-      "rf 0.9006410256410257 47\n",
-      "rf 0.8910256410256411 48\n",
-      "rf 0.9038461538461539 49\n",
+      "rf 0.9198717948717948 43\n",
+      "rf 0.9230769230769231 44\n",
+      "rf 0.9198717948717948 45\n",
+      "rf 0.9198717948717948 46\n",
+      "rf 0.9262820512820513 47\n",
+      "rf 0.9230769230769231 48\n",
+      "rf 0.9230769230769231 49\n",
       "rf 0.9198717948717948 50\n",
-      "rf 0.9134615384615384 51\n",
-      "rf 0.9166666666666666 52\n",
-      "rf 0.907051282051282 53\n",
-      "rf 0.9166666666666666 54\n",
-      "rf 0.9262820512820513 55\n",
-      "rf 0.9038461538461539 56\n",
-      "rf 0.9102564102564102 57\n",
-      "rf 0.9038461538461539 58\n",
-      "rf 0.8878205128205128 59\n",
-      "rf 0.9102564102564102 60\n",
-      "rf 0.9102564102564102 61\n",
-      "rf 0.8974358974358975 62\n",
-      "rf 0.9006410256410257 63\n",
-      "rf 0.9102564102564102 64\n",
+      "rf 0.9230769230769231 51\n",
+      "rf 0.9198717948717948 52\n",
+      "rf 0.9166666666666666 53\n",
+      "rf 0.9134615384615384 54\n",
+      "rf 0.9134615384615384 55\n",
+      "rf 0.9166666666666666 56\n",
+      "rf 0.9198717948717948 57\n",
+      "rf 0.9166666666666666 58\n",
+      "rf 0.9166666666666666 59\n",
+      "rf 0.9198717948717948 60\n",
+      "rf 0.9198717948717948 61\n",
+      "rf 0.9198717948717948 62\n",
+      "rf 0.9166666666666666 63\n",
+      "rf 0.9198717948717948 64\n",
       "rf 0.9198717948717948 65\n",
-      "rf 0.9006410256410257 66\n",
-      "rf 0.9166666666666666 67\n",
-      "rf 0.9134615384615384 68\n",
-      "rf 0.907051282051282 69\n",
-      "rf 0.9038461538461539 70\n",
-      "rf 0.8974358974358975 71\n",
-      "rf 0.9134615384615384 72\n",
-      "rf 0.8910256410256411 73\n",
-      "rf 0.907051282051282 74\n",
-      "rf 0.9038461538461539 75\n",
-      "rf 0.9166666666666666 76\n",
-      "rf 0.9134615384615384 77\n",
-      "rf 0.907051282051282 78\n",
-      "rf 0.9134615384615384 79\n",
-      "rf 0.9230769230769231 80\n",
-      "rf 0.9102564102564102 81\n",
-      "rf 0.9102564102564102 82\n",
-      "rf 0.8942307692307693 83\n",
-      "rf 0.9198717948717948 84\n",
-      "rf 0.907051282051282 85\n",
-      "rf 0.8942307692307693 86\n",
-      "rf 0.907051282051282 87\n",
-      "rf 0.907051282051282 88\n",
-      "rf 0.9102564102564102 89\n",
-      "rf 0.8910256410256411 90\n",
-      "rf 0.9102564102564102 91\n",
-      "rf 0.907051282051282 92\n",
+      "rf 0.9198717948717948 66\n",
+      "rf 0.9198717948717948 67\n",
+      "rf 0.9198717948717948 68\n",
+      "rf 0.9198717948717948 69\n",
+      "rf 0.9198717948717948 70\n",
+      "rf 0.9198717948717948 71\n",
+      "rf 0.9198717948717948 72\n",
+      "rf 0.9198717948717948 73\n",
+      "rf 0.9198717948717948 74\n",
+      "rf 0.9198717948717948 75\n",
+      "rf 0.9198717948717948 76\n",
+      "rf 0.9198717948717948 77\n",
+      "rf 0.9198717948717948 78\n",
+      "rf 0.9230769230769231 79\n",
+      "rf 0.9198717948717948 80\n",
+      "rf 0.9262820512820513 81\n",
+      "rf 0.9198717948717948 82\n",
+      "rf 0.9230769230769231 83\n",
+      "rf 0.9166666666666666 84\n",
+      "rf 0.9198717948717948 85\n",
+      "rf 0.9166666666666666 86\n",
+      "rf 0.9134615384615384 87\n",
+      "rf 0.9134615384615384 88\n",
+      "rf 0.9166666666666666 89\n",
+      "rf 0.9166666666666666 90\n",
+      "rf 0.9198717948717948 91\n",
+      "rf 0.9166666666666666 92\n",
       "rf 0.9166666666666666 93\n",
-      "rf 0.9134615384615384 94\n",
-      "rf 0.9198717948717948 95\n",
-      "rf 0.9198717948717948 96\n",
-      "rf 0.907051282051282 97\n",
+      "rf 0.9166666666666666 94\n",
+      "rf 0.9166666666666666 95\n",
+      "rf 0.9134615384615384 96\n",
+      "rf 0.9134615384615384 97\n",
       "rf 0.9134615384615384 98\n",
-      "rf 0.9038461538461539 99\n"
+      "rf 0.9134615384615384 99\n"
      ]
     },
     {
@@ -341,7 +346,7 @@
        "'\\nsvmlin = svm.SVC(kernel=\"linear\", C=1000)\\nsvmlin.fit(X_train, y_train)\\nprint(svmlin.score(X_test, y_test))\\n\\nsvmpol = svm.SVC(kernel=\"poly\", degree=5, C=1000)\\nsvmpol.fit(X_train, y_train)\\nprint(svmpol.score(X_test, y_test))\\n\\nsvm.SVC(kernel=\"rbf\", gamma=0.3, C=1000)\\nsvmpol.fit(X_train, y_train)\\nprint(svmpol.score(X_test, y_test))\\n'"
       ]
      },
-     "execution_count": 252,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +393,7 @@
     "\"\"\"\n",
     "\n",
     "for i in range(1, 100):\n",
-    "    rf = RandomForestClassifier(n_estimators=37, random_state=i) #37, 22\n",
+    "    rf = RandomForestClassifier(n_estimators=i, random_state=22) #37, 22\n",
     "    rf.fit(X_train_sc, y_train)\n",
     "    y_pred = rf.predict(X_test_sc)\n",
     "    print(\"rf\", accuracy_score(y_test, y_pred), i)\n",
@@ -418,14 +423,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.999198717948718\n"
+      "1.0\n"
      ]
     }
    ],
@@ -446,9 +451,9 @@
     "\n",
     "for i in df.columns:\n",
     "    z_scores = (df[i] - np.mean(df[i])) / np.std(df[i])\n",
-    "    df_clean = df[np.abs(z_scores) < 3]\n",
+    "    df_clean = df[np.abs(z_scores) < 1]\n",
     "\n",
-    "df = df.dropna()\n",
+    "\n",
     "df_y = df[\"Edible\"]\n",
     "df_x = df.drop(columns=\"Edible\")\n",
     "\n",
@@ -459,7 +464,7 @@
     "\n",
     "#knn = KNeighborsClassifier(n_neighbors=6)\n",
     "#knn = DecisionTreeClassifier(max_depth=100, criterion='gini', min_samples_leaf=11)\n",
-    "knn = RandomForestClassifier(n_estimators=37, random_state=0) # 50, 87\n",
+    "knn = RandomForestClassifier(n_estimators=39, random_state=22) # 50, 87\n",
     "\n",
     "\n",
     "knn.fit(df_x_sc, df_y)\n",
@@ -477,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,10 +502,8 @@
     "\n",
     "for i in df.columns:\n",
     "    z_scores = (df[i] - np.mean(df[i])) / np.std(df[i])\n",
-    "    df_clean = df[np.abs(z_scores) < 4]\n",
+    "    df_clean = df[np.abs(z_scores) < 1]\n",
     "\n",
-    "\n",
-    "df = df.dropna()\n",
     "df_test_sc = sc.transform(df)\n",
     "\n",
     "df_test_pred = knn.predict(df_test_sc)\n",
