--- a/Assignment/Assignment_3/CA3_template.ipynb
+++ b/Assignment/Assignment_3/CA3_template.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -175,10 +175,10 @@
     "print(df.isnull().values.any()) # print true if it is missing data, since it is false, there is no missing data\n",
     "\n",
     "\n",
-    "df = df.drop('Find Distance from Main Vulcano (km)', axis=1) \n",
-    "df = df.drop('Atmospheric Pressure at Harvest (Pa)', axis=1) \n",
-    "df = df.drop('Magnetic orientation (degree)', axis=1) \n",
-    "df = df.drop('Soil pH where Grown', axis=1) \n",
+    "#df = df.drop('Find Distance from Main Vulcano (km)', axis=1) \n",
+    "#df = df.drop('Atmospheric Pressure at Harvest (Pa)', axis=1) \n",
+    "#df = df.drop('Magnetic orientation (degree)', axis=1) \n",
+    "#df = df.drop('Soil pH where Grown', axis=1) \n",
     "\n",
     "columns = df.columns\n",
     "imputer = SimpleImputer(missing_values=np.nan, strategy='mean') # other popular choices: \"median\", \"most_frequent\"\n",
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,118 +226,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rf 0.7852564102564102 1\n",
-      "rf 0.7980769230769231 2\n",
-      "rf 0.8493589743589743 3\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "rf 0.8557692307692307 4\n",
-      "rf 0.8589743589743589 5\n",
-      "rf 0.8653846153846154 6\n",
-      "rf 0.8814102564102564 7\n",
-      "rf 0.8814102564102564 8\n",
-      "rf 0.8846153846153846 9\n",
-      "rf 0.8910256410256411 10\n",
-      "rf 0.9006410256410257 11\n",
-      "rf 0.8846153846153846 12\n",
-      "rf 0.9006410256410257 13\n",
-      "rf 0.9038461538461539 14\n",
+      "rf 0.842948717948718 1\n",
+      "rf 0.8301282051282052 2\n",
+      "rf 0.8878205128205128 3\n",
+      "rf 0.8814102564102564 4\n",
+      "rf 0.8974358974358975 5\n",
+      "rf 0.8878205128205128 6\n",
+      "rf 0.8942307692307693 7\n",
+      "rf 0.8878205128205128 8\n",
+      "rf 0.9038461538461539 9\n",
+      "rf 0.9038461538461539 10\n",
+      "rf 0.8974358974358975 11\n",
+      "rf 0.907051282051282 12\n",
+      "rf 0.9038461538461539 13\n",
+      "rf 0.907051282051282 14\n",
       "rf 0.907051282051282 15\n",
-      "rf 0.9166666666666666 16\n",
-      "rf 0.9134615384615384 17\n",
+      "rf 0.9038461538461539 16\n",
+      "rf 0.9038461538461539 17\n",
       "rf 0.9102564102564102 18\n",
-      "rf 0.9102564102564102 19\n",
-      "rf 0.9198717948717948 20\n",
-      "rf 0.9198717948717948 21\n",
-      "rf 0.9134615384615384 22\n",
-      "rf 0.9166666666666666 23\n",
-      "rf 0.9230769230769231 24\n",
-      "rf 0.9166666666666666 25\n",
-      "rf 0.9166666666666666 26\n",
-      "rf 0.9230769230769231 27\n",
-      "rf 0.9198717948717948 28\n",
-      "rf 0.9230769230769231 29\n",
-      "rf 0.9230769230769231 30\n",
-      "rf 0.9198717948717948 31\n",
-      "rf 0.9198717948717948 32\n",
-      "rf 0.9198717948717948 33\n",
-      "rf 0.9198717948717948 34\n",
-      "rf 0.9166666666666666 35\n",
-      "rf 0.9262820512820513 36\n",
-      "rf 0.9262820512820513 37\n",
-      "rf 0.9230769230769231 38\n",
-      "rf 0.9294871794871795 39\n",
-      "rf 0.9230769230769231 40\n",
-      "rf 0.9198717948717948 41\n",
-      "rf 0.9166666666666666 42\n",
-      "rf 0.9198717948717948 43\n",
-      "rf 0.9230769230769231 44\n",
-      "rf 0.9198717948717948 45\n",
-      "rf 0.9198717948717948 46\n",
-      "rf 0.9262820512820513 47\n",
-      "rf 0.9230769230769231 48\n",
-      "rf 0.9230769230769231 49\n",
-      "rf 0.9198717948717948 50\n",
-      "rf 0.9230769230769231 51\n",
-      "rf 0.9198717948717948 52\n",
-      "rf 0.9166666666666666 53\n",
-      "rf 0.9134615384615384 54\n",
-      "rf 0.9134615384615384 55\n",
-      "rf 0.9166666666666666 56\n",
-      "rf 0.9198717948717948 57\n",
-      "rf 0.9166666666666666 58\n",
-      "rf 0.9166666666666666 59\n",
-      "rf 0.9198717948717948 60\n",
-      "rf 0.9198717948717948 61\n",
-      "rf 0.9198717948717948 62\n",
-      "rf 0.9166666666666666 63\n",
-      "rf 0.9198717948717948 64\n",
-      "rf 0.9198717948717948 65\n",
-      "rf 0.9198717948717948 66\n",
-      "rf 0.9198717948717948 67\n",
-      "rf 0.9198717948717948 68\n",
-      "rf 0.9198717948717948 69\n",
-      "rf 0.9198717948717948 70\n",
-      "rf 0.9198717948717948 71\n",
-      "rf 0.9198717948717948 72\n",
-      "rf 0.9198717948717948 73\n",
-      "rf 0.9198717948717948 74\n",
-      "rf 0.9198717948717948 75\n",
-      "rf 0.9198717948717948 76\n",
-      "rf 0.9198717948717948 77\n",
-      "rf 0.9198717948717948 78\n",
-      "rf 0.9230769230769231 79\n",
-      "rf 0.9198717948717948 80\n",
-      "rf 0.9262820512820513 81\n",
-      "rf 0.9198717948717948 82\n",
-      "rf 0.9230769230769231 83\n",
-      "rf 0.9166666666666666 84\n",
-      "rf 0.9198717948717948 85\n",
-      "rf 0.9166666666666666 86\n",
-      "rf 0.9134615384615384 87\n",
-      "rf 0.9134615384615384 88\n",
-      "rf 0.9166666666666666 89\n",
-      "rf 0.9166666666666666 90\n",
-      "rf 0.9198717948717948 91\n",
-      "rf 0.9166666666666666 92\n",
-      "rf 0.9166666666666666 93\n",
-      "rf 0.9166666666666666 94\n",
-      "rf 0.9166666666666666 95\n",
-      "rf 0.9134615384615384 96\n",
-      "rf 0.9134615384615384 97\n",
-      "rf 0.9134615384615384 98\n",
-      "rf 0.9134615384615384 99\n"
+      "rf 0.907051282051282 19\n",
+      "rf 0.907051282051282 20\n",
+      "rf 0.9102564102564102 21\n",
+      "rf 0.9102564102564102 22\n",
+      "rf 0.907051282051282 23\n",
+      "rf 0.9102564102564102 24\n",
+      "rf 0.9102564102564102 25\n",
+      "rf 0.9102564102564102 26\n",
+      "rf 0.9102564102564102 27\n",
+      "rf 0.9102564102564102 28\n",
+      "rf 0.9102564102564102 29\n",
+      "rf 0.9102564102564102 30\n",
+      "rf 0.9102564102564102 31\n",
+      "rf 0.9102564102564102 32\n",
+      "rf 0.9102564102564102 33\n",
+      "rf 0.907051282051282 34\n",
+      "rf 0.907051282051282 35\n",
+      "rf 0.907051282051282 36\n",
+      "rf 0.907051282051282 37\n",
+      "rf 0.907051282051282 38\n",
+      "rf 0.907051282051282 39\n",
+      "rf 0.9038461538461539 40\n",
+      "rf 0.907051282051282 41\n",
+      "rf 0.9038461538461539 42\n",
+      "rf 0.907051282051282 43\n",
+      "rf 0.9038461538461539 44\n",
+      "rf 0.907051282051282 45\n",
+      "rf 0.907051282051282 46\n",
+      "rf 0.907051282051282 47\n",
+      "rf 0.907051282051282 48\n",
+      "rf 0.907051282051282 49\n"
      ]
     },
     {
@@ -346,7 +290,7 @@
        "'\\nsvmlin = svm.SVC(kernel=\"linear\", C=1000)\\nsvmlin.fit(X_train, y_train)\\nprint(svmlin.score(X_test, y_test))\\n\\nsvmpol = svm.SVC(kernel=\"poly\", degree=5, C=1000)\\nsvmpol.fit(X_train, y_train)\\nprint(svmpol.score(X_test, y_test))\\n\\nsvm.SVC(kernel=\"rbf\", gamma=0.3, C=1000)\\nsvmpol.fit(X_train, y_train)\\nprint(svmpol.score(X_test, y_test))\\n'"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,8 +336,8 @@
     "\n",
     "\"\"\"\n",
     "\n",
-    "for i in range(1, 100):\n",
-    "    rf = RandomForestClassifier(n_estimators=i, random_state=22) #37, 22\n",
+    "for i in range(1, 50):\n",
+    "    rf = RandomForestClassifier(n_estimators=i, random_state=0) #37, 22\n",
     "    rf.fit(X_train_sc, y_train)\n",
     "    y_pred = rf.predict(X_test_sc)\n",
     "    print(\"rf\", accuracy_score(y_test, y_pred), i)\n",
@@ -423,14 +367,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0\n"
+      "0.9975961538461539\n"
      ]
     }
    ],
@@ -438,10 +382,10 @@
     "df = pd.read_csv(\"assets/train.csv\", index_col=0) # First column as row index\n",
     "\n",
     "\n",
-    "df = df.drop('Find Distance from Main Vulcano (km)', axis=1) \n",
-    "df = df.drop('Atmospheric Pressure at Harvest (Pa)', axis=1) \n",
-    "df = df.drop('Magnetic orientation (degree)', axis=1) \n",
-    "df = df.drop('Soil pH where Grown', axis=1) \n",
+    "#df = df.drop('Find Distance from Main Vulcano (km)', axis=1) \n",
+    "#df = df.drop('Atmospheric Pressure at Harvest (Pa)', axis=1) \n",
+    "#df = df.drop('Magnetic orientation (degree)', axis=1) \n",
+    "#df = df.drop('Soil pH where Grown', axis=1) \n",
     "\n",
     "columns = df.columns\n",
     "imputer = SimpleImputer(missing_values=np.nan, strategy='mean') # other popular choices: \"median\", \"most_frequent\"\n",
@@ -464,7 +408,7 @@
     "\n",
     "#knn = KNeighborsClassifier(n_neighbors=6)\n",
     "#knn = DecisionTreeClassifier(max_depth=100, criterion='gini', min_samples_leaf=11)\n",
-    "knn = RandomForestClassifier(n_estimators=39, random_state=22) # 50, 87\n",
+    "knn = RandomForestClassifier(n_estimators=18, random_state=0) # 50, 87 # 19\n",
     "\n",
     "\n",
     "knn.fit(df_x_sc, df_y)\n",
@@ -482,17 +426,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv(\"assets/test.csv\", index_col=0)\n",
     "\n",
-    "\n",
-    "df = df.drop('Find Distance from Main Vulcano (km)', axis=1) \n",
-    "df = df.drop('Atmospheric Pressure at Harvest (Pa)', axis=1) \n",
-    "df = df.drop('Magnetic orientation (degree)', axis=1) \n",
-    "df = df.drop('Soil pH where Grown', axis=1) \n",
+    "#df = df.drop('Find Distance from Main Vulcano (km)', axis=1) \n",
+    "#df = df.drop('Atmospheric Pressure at Harvest (Pa)', axis=1) \n",
+    "#df = df.drop('Magnetic orientation (degree)', axis=1) \n",
+    "#df = df.drop('Soil pH where Grown', axis=1) \n",
     "\n",
     "columns = df.columns\n",
     "imputer = SimpleImputer(missing_values=np.nan, strategy='mean') # other popular choices: \"median\", \"most_frequent\"\n",
