--- a/Assignment/Assignment_4/CA4.ipynb
+++ b/Assignment/Assignment_4/CA4.ipynb
@@ -8601,13 +8601,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['Healthy' 'Cirrhosis' 'Drug-induced Liver Injury' 'Fatty Liver Disease'\n",
+      " 'Hepatitis' 'Autoimmune Liver Diseases' 'Liver Cancer']\n",
       "       AFP (ng/mL)    ALP (U/L)   ALT (U/L)  AST (U/L)  Age  Albumin (g/dL)  \\\n",
       "index                                                                         \n",
       "1124     13.571425  1653.138489   40.405592  45.598427    4        4.477126   \n",
@@ -8669,7 +8671,7 @@
       "1124       4.180007  6.163600          0  \n",
       "1188       4.590995  5.244266          1  \n",
       "530        4.524580  5.769592          0  \n",
-      "686        4.234483  5.982228          1  \n",
+      "686        4.234483  5.982228          2  \n",
       "296        4.306892  4.837404          0  \n"
      ]
     }
@@ -8686,10 +8688,12 @@
     "df['Obesity (yes/no)'] = label_to_number.fit_transform(df['Obesity (yes/no)'])\n",
     "df['Gender'] = label_to_number.fit_transform(df['Gender'])\n",
     "\n",
+    "# print all values in diagnosis\n",
+    "print(df['Diagnosis'].unique())\n",
+    "\n",
     "Diagnosis_mapping = {'Healthy': 0, \n",
-    "                     'Cirrhosis': 1, 'Drug-induced Liver Injury':1,\n",
-    "                     'Fatty Liver Disease': 2, 'Hepatitis': 3, 'Autoimmune Liver Diseases': 4,\n",
-    "                     'Liver Cancer' : 5}\n",
+    "                     'Cirrhosis': 1, 'Drug-induced Liver Injury':1, 'Fatty Liver Disease': 1, \n",
+    "                     'Hepatitis': 1, 'Autoimmune Liver Diseases': 1, 'Liver Cancer' : 1}\n",
     "df['Diagnosis'] = df['Diagnosis'].map(Diagnosis_mapping)\n",
     "# Take this last to be able to transform back.\n",
     "\n",
